# libobj

./: .gitignore  CMakeLists.txt  README.md
include/libobj/: default_functions.h  libobj.h  macros.h  memory.h
src/: default_functions.c  libobj.c  memory.c
